refactor: migrate from jacksonxml to google gson